[REST] refactored fiat conversion offer endpoint to quote.
